<resources>
    <string name="app_name">RismaJT</string>
    <string name="open">Open Navigation</string>
    <string name="close">Close Navigation</string>
    <string name="Home">Home</string>
    <string name="Contact">Contact</string>
    <string name="Gallery">Gallery</string>
    <string name="Profile">Profile</string>
    <string name="About">About</string>
    <string name="Login">Login</string>
    <string name="Communication">Communication</string>
    <string name="Share">Share</string>
    <string name="Rate">Rate us</string>
    <string name="DataMember">Data Member</string>
    <string name="DataBisnis">Data Bisnis</string>
    <string name="Mitra">Mitra</string>
    <string name="MarketPlace">Market Place</string>
    <string name="DescRisma">RISMA JT merupakan salah satu badan otonom di bawah naungan Masjid Agung Jawa Tengah (MAJT) yang bertugas untuk melakukan Pengkaderan, pembinaan dan Pemberdayaan bagi Remaja Islam yang tergabung di dalamnya. RISMA JT sebagai kepanjangan tangan dari MAJT untuk melakukan pengkaderan dan pembinaan bagi remaja Islam memiliki peranan penting dalam membina remaja untuk selalu berbagi kemanfaatan, mengajak pada kebaikan serta menjadikan diri generasi muda terbaik bangsa.</string>
    <string name="DescJoghast">JogHast Advertising adalah perusahaan jasa pembuatan media iklan, termasuk di dalamnya perencanaan strategis, saran kreatif serta supervisi produksi, dimana proses produksi kami selalu mengikuti standar kualitas tertinggi, lengkap dengan perawatan dan pengawasan yang dilakukan secara teratur, didukung sumber daya manusia yang terampil dan dapat diandalkan.Kami membantu client dalam pembuatan konstruksi billboard, neonbox, shop sign, mobile branding, huruf timbul, fasad bangunan dan lain lain.Kami juga memberikan pelayanan outdoor mulai dari pencarian titik lokasi strategi, pengurusan perijinan beserta pajak, kontrak lokasi hingga perawatannya.</string>
    <string name="DescAhad">Ahad Digital adalah sebuah perusahaan digital agency yang berfokus pada pemasaran online dengan sistem kemitraan. Kami ingin membangun kemitraan dengan bisnis-bisnis yang potensial untuk dipasarkan secara online.Tim Ahad Digital terdiri dari para profesional berpengalaman di bidang Digital Marketing yang telah bersertifikasi Google dan Facebook.Ahad memegang nilai penting dalam membangun kemitraan yaitu Amanah, Profesional dan Bekerja Keras. </string>
    <string name="DescJeram">Jeram Adventure Store merupakan toko yang menyediakan peralatan kegiatan outdoor dengan berbagai merk, yang telah berdiri sejak tahun 2002.Kami memiliki 9 toko cabang yang tersebar di berbagai wilayah di Jawa Tengah, DI. Yogyakarta dan akan terus berkembang ke berbagai wilayah lainnya.Kami selalu konsisten untuk selalu memberikan pelayanan terbaik kepada para Customer kami, dengan membuka website resmi kami www.jeramadventurestore.com kami akan menjadi lebih dekat dengan Anda dimanapun Anda berada.</string>
    <string name="DescWarung">Warung Kopi Bersaudara adalah sebuah tempat yang nyaman buat pecinta kopi, tersedia kopi racikan spesial dari kopi Jawa disajikan ala tubruk atau manual brew.Tahun 2016 lalu kami nekad membuka kedai kopi dengan berbekal otak atik beberapa biji kopi dari Temanggung varian arabika, robusta dan excelsa yang kami goreng sangan dengan wajan gerabah. Menakar kematangan, mengomposisikan takaran perbandingan untuk mendapatkan blend yang kini selalu tersuguhkan sebagai kopi reguler kami.Pilihan membuat Blend adalah menyuguhkan kopi yang nikmat, punya ciri khas dan harga terjangkau, meski kini perlahan biji kopi yang kami datangkan harganya naik dan mesti berebut, tapi kami tetap ingin setia menyuguhkan racikan khas Kopi Bersaudara untuk Anda penikmat kopi.</string>
</resources>