<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".home_page">

    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/header"
        app:menu="@menu/menu"
        android:id="@+id/nav_view"
        android:layout_gravity="start">
    </com.google.android.material.navigation.NavigationView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <com.denzcoskun.imageslider.ImageSlider
                        android:id="@+id/image_slider"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        app:iss_auto_cycle="true"
                        app:iss_period="1000"
                        app:iss_delay="1000">
                    </com.denzcoskun.imageslider.ImageSlider>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="400dp"
                android:layout_marginTop="20dp"
                android:layout_below="@id/cardview"
                android:rowCount="2"
                android:columnCount="2"
                >
                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center_vertical|center_horizontal">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_baseline_menu_book_24">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/DataMember">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center_vertical|center_horizontal">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_baseline_groups_24">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/DataBisnis">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center_vertical|center_horizontal">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_baseline_handshake_24">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/Mitra">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    app:cardBackgroundColor="@android:color/transparent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_gravity="fill"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="0dp"
                    app:cardElevation="0dp"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_gravity="center_vertical|center_horizontal">
                        <ImageView
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:scaleType="fitCenter"
                            android:src="@drawable/ic_baseline_shopping_cart_24">
                        </ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            android:text="@string/MarketPlace">
                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </GridLayout>
        </RelativeLayout>
    </ScrollView>

</androidx.drawerlayout.widget.DrawerLayout>
